Removed visibility hidden from form required-symbol (IE11 fix)

--- a/scss/form/_forms.scss
+++ b/scss/form/_forms.scss
@@ -79,7 +79,6 @@ Default Form Styles
         width: $form-field-required-icon-width;
         height: $form-field-required-icon-height;
         overflow: hidden;
-        visibility: hidden;
         &:before {
             content: $form-field-required-icon;
             color: $form-field-required-icon-color;
@@ -322,4 +321,3 @@ Form Modal
         margin-top: $grid-gutter-width;
     }
 }
-
